adding missing jsons

--- a/scripts/3_spacy-text-explorations.ipynb
+++ b/scripts/3_spacy-text-explorations.ipynb
@@ -264,13 +264,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 146,
    "outputs": [
     {
      "data": {
       "text/plain": "['1031760.json',\n '1085290.json',\n '1285853.json',\n '1285854.json',\n '1285855.json',\n '1285856.json',\n '1365811.json',\n '1370560.json',\n '1378359.json',\n '1424044.json']"
      },
-     "execution_count": 132,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,21 +283,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-07T08:14:32.380130Z",
-     "start_time": "2023-11-07T08:14:30.627493Z"
+     "end_time": "2023-11-07T10:47:40.396461Z",
+     "start_time": "2023-11-07T10:47:39.156690Z"
     }
    },
    "id": "34bc5c5fe82e46e5"
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 147,
    "outputs": [
     {
      "data": {
-      "text/plain": "875"
+      "text/plain": "1007"
      },
-     "execution_count": 133,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,8 +308,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-07T08:14:33.079721Z",
-     "start_time": "2023-11-07T08:14:33.077302Z"
+     "end_time": "2023-11-07T10:47:40.398563Z",
+     "start_time": "2023-11-07T10:47:40.396123Z"
     }
    },
    "id": "5c3fbb9bf94efdad"
@@ -528,13 +528,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 138,
+   "outputs": [],
+   "source": [
+    "latinwn = pd.read_csv(\"https://raw.githubusercontent.com/CIRCSE/latinWordnet-revision/master/LiLa_LatinWordnet.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-07T08:39:57.944549Z",
+     "start_time": "2023-11-07T08:39:56.993340Z"
+    }
+   },
+   "id": "7d076900b344ec3f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "      id     lemma   type                                lila_uri  \\\n0  90942     a, aa  LEMMA  http://lila-erc.eu/data/id/lemma/90942   \n1  86826   abactio  LEMMA  http://lila-erc.eu/data/id/lemma/86826   \n2  86828   abactor  LEMMA  http://lila-erc.eu/data/id/lemma/86828   \n3  91165   abactus  LEMMA  http://lila-erc.eu/data/id/lemma/91165   \n4  86833  abaculus  LEMMA  http://lila-erc.eu/data/id/lemma/86833   \n\n                                          id_synset  \\\n0  http://wordnet-rdf.princeton.edu/wn30/06831177-n   \n1  http://wordnet-rdf.princeton.edu/wn30/00391599-n   \n2  http://wordnet-rdf.princeton.edu/wn30/10544480-n   \n3  http://wordnet-rdf.princeton.edu/wn30/00780889-n   \n4  http://wordnet-rdf.princeton.edu/wn30/04435180-n   \n\n                                          definition  \n0               the 1st letter of the Roman alphabet  \n1                                the act of removing  \n2   someone who steals livestock (especially cattle)  \n3  the act of taking something from someone unlaw...  \n4  a flat thin rectangular slab (as of fired clay...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>lemma</th>\n      <th>type</th>\n      <th>lila_uri</th>\n      <th>id_synset</th>\n      <th>definition</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>90942</td>\n      <td>a, aa</td>\n      <td>LEMMA</td>\n      <td>http://lila-erc.eu/data/id/lemma/90942</td>\n      <td>http://wordnet-rdf.princeton.edu/wn30/06831177-n</td>\n      <td>the 1st letter of the Roman alphabet</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>86826</td>\n      <td>abactio</td>\n      <td>LEMMA</td>\n      <td>http://lila-erc.eu/data/id/lemma/86826</td>\n      <td>http://wordnet-rdf.princeton.edu/wn30/00391599-n</td>\n      <td>the act of removing</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>86828</td>\n      <td>abactor</td>\n      <td>LEMMA</td>\n      <td>http://lila-erc.eu/data/id/lemma/86828</td>\n      <td>http://wordnet-rdf.princeton.edu/wn30/10544480-n</td>\n      <td>someone who steals livestock (especially cattle)</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>91165</td>\n      <td>abactus</td>\n      <td>LEMMA</td>\n      <td>http://lila-erc.eu/data/id/lemma/91165</td>\n      <td>http://wordnet-rdf.princeton.edu/wn30/00780889-n</td>\n      <td>the act of taking something from someone unlaw...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>86833</td>\n      <td>abaculus</td>\n      <td>LEMMA</td>\n      <td>http://lila-erc.eu/data/id/lemma/86833</td>\n      <td>http://wordnet-rdf.princeton.edu/wn30/04435180-n</td>\n      <td>a flat thin rectangular slab (as of fired clay...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latinwn.head(5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-07T08:40:05.218647Z",
+     "start_time": "2023-11-07T08:40:05.196010Z"
+    }
+   },
+   "id": "643f085663cbb85d"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "7d076900b344ec3f"
+   "id": "c815f36f365efc15"
   }
  ],
  "metadata": {
