--- a/scripts/2_noscemus-spacy-preprocess.ipynb
+++ b/scripts/2_noscemus-spacy-preprocess.ipynb
@@ -1255,8 +1255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 78,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2h 17min 24s, sys: 5min 13s, total: 2h 22min 38s\n",
+      "Wall time: 2h 37min 43s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "%%capture\n",
@@ -1273,8 +1282,8 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2023-11-07T10:22:41.889618Z",
      "start_time": "2023-11-07T07:44:58.229414Z"
     }
    },
