work in progress

--- a/scripts/metadata-scraping.ipynb
+++ b/scripts/metadata-scraping.ipynb
@@ -139,7 +139,7 @@
     }
    ],
    "source": [
-    "# vytvoreni seznamu webovych stranek noscemu, na zaklade ktereho iteruji\n",
+    "# vytvoreni seznamu webovych stranek noscemu, na zaklade ktereho iteruj\n",
     "url = [\"https://wiki.uibk.ac.at/noscemus/_-_/index.php?title=Category:Works&pageuntil=De+curandis+vulneribus+sclopettorum#mw-pages\", \"https://wiki.uibk.ac.at/noscemus/_-_/index.php?title=Category:Works&pagefrom=De+curandis+vulneribus+sclopettorum#mw-pages\", \"https://wiki.uibk.ac.at/noscemus/_-_/index.php?title=Category:Works&pagefrom=Discursus+astronomicus+novissimus#mw-pages\", \"https://wiki.uibk.ac.at/noscemus/_-_/index.php?title=Category:Works&pagefrom=In+opus+revolutionum+Nicolai+Copernici+Torunnaei+dialogus#mw-pages\", \"https://wiki.uibk.ac.at/noscemus/_-_/index.php?title=Category:Works&pagefrom=Petri+Nonii+Salaciensis+opera#mw-pages\",]\n",
     "seznam =[]\n",
     "for item in url:\n",
