checking Honza's merge

--- a/scripts/1_extract-noscemus-full.ipynb
+++ b/scripts/1_extract-noscemus-full.ipynb
@@ -210,7 +210,7 @@
    "source": [
     "filenames_ids_dict = {}\n",
     "missing_ids = []\n",
-    "for id in dir_ids_list[:10]:\n",
+    "for id in dir_ids_list:\n",
     "    try:\n",
     "        filenames = s.list_filenames(\"NOSCEMUS_FULL/\" + id, \"txt\")\n",
     "        if len(filenames) > 1:\n",
