--- a/scripts/3_spacy-text-explorations.ipynb
+++ b/scripts/3_spacy-text-explorations.ipynb
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "ids_filenames_df[\"year\"].between(1400, 1800).sum()\n"
+    "ids_filenames_df[\"year\"].between(1400, 1800).sum()"
    ],
    "metadata": {
     "collapsed": false,
@@ -146,6 +146,32 @@
     }
    },
    "id": "b72c0fbdb3c65c66"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   Unnamed: 0       id                                     filenames_list  \\\n0           0  1031760  ['Bacon,_Francis_-_Instauratio_magna__London_1...   \n1           1  1085290  ['Linden,_Johannes_Antonides_van_der_-_Lindeni...   \n2           2  1285853  ['de_Conde,_Ioannes_Baptista_-_Aphorismi_seu_a...   \n3           3  1285854  ['van_Poort,_Henricus_-_Hippocratis_Aphorismi_...   \n4           4  1285855  ['Hippocrates_&_Denisot,_Gérard_-_Hippocratis_...   \n\n     year  \n0  1620.0  \n1  1686.0  \n2  1647.0  \n3  1657.0  \n4  1634.0  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>id</th>\n      <th>filenames_list</th>\n      <th>year</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>1031760</td>\n      <td>['Bacon,_Francis_-_Instauratio_magna__London_1...</td>\n      <td>1620.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1085290</td>\n      <td>['Linden,_Johannes_Antonides_van_der_-_Lindeni...</td>\n      <td>1686.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>1285853</td>\n      <td>['de_Conde,_Ioannes_Baptista_-_Aphorismi_seu_a...</td>\n      <td>1647.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>1285854</td>\n      <td>['van_Poort,_Henricus_-_Hippocratis_Aphorismi_...</td>\n      <td>1657.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>1285855</td>\n      <td>['Hippocrates_&amp;_Denisot,_Gérard_-_Hippocratis_...</td>\n      <td>1634.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids_filenames_df.head(5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-07T14:10:52.956072Z",
+     "start_time": "2023-11-07T14:10:52.946030Z"
+    }
+   },
+   "id": "288137f0bf24aa9e"
   },
   {
    "cell_type": "code",
@@ -174,13 +200,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 149,
    "outputs": [
     {
      "data": {
       "text/plain": "(1460.0, 1930.0)"
      },
-     "execution_count": 92,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -205,8 +231,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-06T20:18:37.960204Z",
-     "start_time": "2023-11-06T20:18:37.760573Z"
+     "end_time": "2023-11-07T14:11:48.915641Z",
+     "start_time": "2023-11-07T14:11:48.692451Z"
     }
    },
    "id": "e42c2071868dab54"
@@ -316,9 +342,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c6818bc37d858f8"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 134,
    "outputs": [],
    "source": [
+    "%%time\n",
     "def filename_to_doc(filename, dir=target_folder_name):\n",
     "    doc_json = s.read_file(dir + \"/\" + filename, \"dict\")\n",
     "    doc = Doc(nlp.vocab).from_json(doc_json)\n",
