metadata in nice shape....

--- a/scripts/3_spacy-text-explorations.ipynb
+++ b/scripts/3_spacy-text-explorations.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 155,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-10T08:43:19.846155Z",
-     "start_time": "2023-11-10T08:43:17.649056Z"
+     "end_time": "2023-11-10T15:19:14.296047Z",
+     "start_time": "2023-11-10T15:19:14.225254Z"
     }
    },
    "outputs": [],
@@ -18,7 +18,12 @@
     "import sddk\n",
     "import pandas as pd\n",
     "import re\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import json\n",
+    "\n",
+    "import gspread\n",
+    "from gspread_dataframe import get_as_dataframe, set_with_dataframe\n",
+    "from google.oauth2 import service_account # based on google-auth library"
    ]
   },
   {
@@ -36,6 +41,30 @@
     }
    },
    "id": "234d6a3cc5f7a819"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "outputs": [],
+   "source": [
+    "file_data = json.load(open(\"../data/ServiceAccountsKey.json\"))\n",
+    "# (2) transform the content into crendentials object\n",
+    "credentials = service_account.Credentials.from_service_account_info(file_data)\n",
+    "# (3) specify your usage of the credentials\n",
+    "scoped_credentials = credentials.with_scopes(['https://spreadsheets.google.com/feeds', 'https://www.googleapis.com/auth/drive'])\n",
+    "# (4) use the constrained credentials for authentication of gspread package\n",
+    "gc = gspread.Client(auth=scoped_credentials)\n",
+    "\n",
+    "noscemus_gs = gc.open_by_url(\"https://docs.google.com/spreadsheets/d/1ekf9RBfd4yqy0p0IWJ4SDk1kUT70hnoIVX1H6KPdIts/edit?usp=sharing\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-10T15:23:15.588033Z",
+     "start_time": "2023-11-10T15:23:14.970723Z"
+    }
+   },
+   "id": "1c7c54fa3f1fb3e1"
   },
   {
    "cell_type": "markdown",
@@ -947,6 +976,22 @@
     }
    },
    "id": "19c0cd539217edf5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "outputs": [],
+   "source": [
+    "set_with_dataframe(noscemus_gs.add_worksheet(\"metadata_table_long\", 1,1), metadata_table_long)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-10T15:25:37.664196Z",
+     "start_time": "2023-11-10T15:25:33.402227Z"
+    }
+   },
+   "id": "b3b42026f71315c1"
   },
   {
    "cell_type": "markdown",
