textual explorations ongoing...

--- a/scripts/3_metadata-explorations&spacy-extraction.ipynb
+++ b/scripts/3_metadata-explorations&spacy-extraction.ipynb
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "for fn in jsonfiles_list:\n",
@@ -1492,8 +1492,8 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2023-11-21T13:27:07.753960Z",
      "start_time": "2023-11-21T09:15:37.681931Z"
     }
    },
