exploring target sentences

--- a/scripts/lemmata-explorations.ipynb
+++ b/scripts/lemmata-explorations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 414,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -11,16 +11,47 @@
     "import os\n",
     "from gensim.models import KeyedVectors\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import json\n",
+    "\n",
+    "import gspread\n",
+    "from gspread_dataframe import get_as_dataframe, set_with_dataframe\n",
+    "from google.oauth2 import service_account # based on google-auth library"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:57:19.611740Z",
-     "start_time": "2023-11-23T22:57:19.600004Z"
+     "end_time": "2023-11-24T11:19:27.363077Z",
+     "start_time": "2023-11-24T11:19:27.347284Z"
     }
    },
    "id": "b32c4cab428524ee"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 415,
+   "outputs": [],
+   "source": [
+    "file_data = json.load(open(\"../data/ServiceAccountsKey.json\"))\n",
+    "# (2) transform the content into crendentials object\n",
+    "credentials = service_account.Credentials.from_service_account_info(file_data)\n",
+    "# (3) specify your usage of the credentials\n",
+    "scoped_credentials = credentials.with_scopes(\n",
+    "    ['https://spreadsheets.google.com/feeds', 'https://www.googleapis.com/auth/drive'])\n",
+    "# (4) use the constrained credentials for authentication of gspread package\n",
+    "gc = gspread.Client(auth=scoped_credentials)\n",
+    "\n",
+    "noscemus_gs = gc.open_by_url(\n",
+    "    \"https://docs.google.com/spreadsheets/d/1ekf9RBfd4yqy0p0IWJ4SDk1kUT70hnoIVX1H6KPdIts/edit?usp=sharing\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T11:19:30.728853Z",
+     "start_time": "2023-11-24T11:19:29.292355Z"
+    }
+   },
+   "id": "b1ef6e1cdf21cf21"
   },
   {
    "cell_type": "code",
@@ -723,11 +754,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5d9e0d3e6e15146a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1a6713dacede4f84"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 416,
    "outputs": [],
    "source": [
-    "target = \"cultus\""
+    "set_with_dataframe(noscemus_gs.add_worksheet(\"metadata_table_long_v3\", 1,1), metadata_table_long)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T11:20:24.415108Z",
+     "start_time": "2023-11-24T11:20:17.349124Z"
+    }
+   },
+   "id": "7ddf862af70a3815"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Temporal analysis of coocuccerences - development & testing"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5e7a416e3f6f8a59"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
@@ -739,52 +814,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 417,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.1 s, sys: 366 ms, total: 18.5 s\n",
-      "Wall time: 18.8 s\n"
+      "CPU times: user 38.8 s, sys: 752 ms, total: 39.5 s\n",
+      "Wall time: 40.4 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "start = 1551\n",
-    "end = start + 49\n",
-    "ids = metadata_table_long[metadata_table_long[\"file_year\"].between(start, end)][\"id\"]\n",
-    "vocab_counter = Counter()\n",
-    "target_sents = []\n",
-    "for id in ids:\n",
-    "    sents_lemmata_all = []\n",
+    "target = \"cultus\" # choose your target word, ie. the word which's context you want to investigate\n",
+    "start = 1551 # choose the start your of the period under \n",
+    "end = start + 49 # end of the period\n",
+    "ids = metadata_table_long[metadata_table_long[\"file_year\"].between(start, end)][\"id\"] # use the metadata table to extract IDs of all works falling into this period\n",
+    "vocab_counter = Counter() # initiate an empty counter of words - we will feed it iterarively on the go by all words we meet\n",
+    "target_sents = [] # initiate an empty list of sentences containing the target word\n",
+    "for id in ids: # for each work ID from our subset of IDs\n",
+    "    # based on the ID, open the file containing the lemmatized sentences and load its content as a list of lists\n",
     "    with open(\"../data/large_data/sents_lemmata/{}.txt\".format(str(id)), \"r\") as f:\n",
     "        sents_lemmata = [sent.strip().split() for sent in f.readlines()]\n",
-    "    sents_n = len(sents_lemmata)\n",
-    "    lemmata = [l for s in sents_lemmata for l in s]\n",
-    "    target_sents.extend([sent for sent in sents_lemmata if target in sent])\n",
+    "    # based on the ID, open the file containing POS tags of the sentences and load its content as a list of lists\n",
+    "    # (this object should have the same structure as the previous one, what allows us to do a sort of filtering based on selected POS tags\n",
+    "    with open(\"../data/large_data/sents_pos/{}.txt\".format(str(id)), \"r\") as f:\n",
+    "        sents_pos = [sent.strip().split() for sent in f.readlines()]\n",
+    "    sents_n = len(sents_lemmata) # count the number of sentences within the document\n",
+    "    lemmata = [l for s in sents_lemmata for l in s] # represent the whole work as one continuous list of words\n",
+    "    word_counts = dict(nltk.FreqDist(lemmata).most_common()) # count all words within the lemmata list\n",
+    "    vocab_counter.update(word_counts) # update the counter by these words\n",
+    "    sents_lemmata_filtered = [] # initiate a new empty list for sentence lemmata filtered by POS tags \n",
+    "    for n in range(len(sents_lemmata)):\n",
+    "        pos_indices = [t[0] for t in enumerate(sents_pos[n]) if t[1] in [\"PROPN\", \"NOUN\",\"VERB\", \"ADJ\"]] # PROPN\n",
+    "        sent = sents_lemmata[n]\n",
+    "        try:\n",
+    "            sent_filtered = [sent[i] for i in pos_indices]\n",
+    "        except:\n",
+    "            sent_filtered = []\n",
+    "        #sent_filtered = [el for el in sent_filtered if len(el) > 2]\n",
+    "        sents_lemmata_filtered.append(sent_filtered)\n",
+    "    target_sents_local = [sent for sent in sents_lemmata_filtered if target in sent]\n",
+    "    target_sents.extend(target_sents_local)\n",
     "    word_counts = dict(nltk.FreqDist(lemmata).most_common()) \n",
     "    vocab_counter.update(word_counts)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T23:30:02.892088Z",
-     "start_time": "2023-11-23T23:29:44.089610Z"
+     "end_time": "2023-11-24T11:58:52.551281Z",
+     "start_time": "2023-11-24T11:58:12.471486Z"
     }
    },
    "id": "b71d303b714a5418"
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 420,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1508"
+     },
+     "execution_count": 420,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(target_sents)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T12:00:55.235050Z",
+     "start_time": "2023-11-24T12:00:55.190959Z"
+    }
+   },
+   "id": "1d059f39972e136e"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 421,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['itus', 'que', 'deco', 'expolosco', 'quasi', 'uirgo', 'nubilis', 'se', 'in', 'conipectus', 'do', 'hic', 'pronubo', 'speciator', 'ad', 'se', 'hamerem', 'cultus', 'traho', 'et', 'licet', 'vt', 'praeclo', 'dico', 'comicus', 'nihil', 'dico', 'quod', 'non', 'sum', 'dico', 'prius', 'ideo', 'que', 'multus', 'aristoteles', 'is', 'qui', 'ante', 'ipse', 'alius', 'phil'], ['inor', 'ut', 'et', 'hic', 'quidem', 'poplis', 'extendo', 'descendo', 'in', 'lacertum', 'hic', 'trio', 'cor', 'specicio', 'sedes', 'operatio', 'ipse', 'processus', 'cultus', 'crus', 'facio', 'descendo', 'ramus', 'in', 'duo', 'use', 'qui', 'ad', 'fil', 'sum', 'hepar'], ['ob', 'iom', 'non', 'prius', 'quam', 'hic', 'ipse', 'compositum', 'lęsa', 'constitutio', 'favarium', 'dispositio', 'significatus', 'obseruo', 'auicennas', 'non', 'cultus', 'lędi', 'possum', 'profecto', 'pręcedo', 'constitutio', 'lęsa', 'faculta', 'ignarus', 'ad', 'posterus', 'pertineo', 'ut', 'si', 'qui', 'ueter', 'reliquo', 'tem', 'lęsam'], ['cultus', 'non', 'mediocriter', 'opprimo', 'obruo', 'que', 'certus', 'ad', 'exterior', 'ad', 'suus', 'principium'], ['1', 'de', 'sermo', 'c.', 'quòd', 'per', 'somnus', 'animal', 'fa-', '10', 'cultus', 'quiesco', 'naturalis', 'uehementer', 'ago', 'uis', 'que', 'instauro', 'primo', 'de', 'sympt']]\n"
+      "[['itus', 'deco', 'expolosco', 'uirgo', 'nubilis', 'conipectus', 'do', 'pronubo', 'speciator', 'hamerem', 'cultus', 'traho', 'licet', 'dico', 'comicus', 'nihil', 'dico', 'dico', 'multus', 'aristoteles', 'phil'], ['inor', 'poplis', 'extendo', 'descendo', 'lacertum', 'trio', 'cor', 'specicio', 'sedes', 'operatio', 'processus', 'cultus', 'crus', 'facio', 'descendo', 'ramus', 'fil', 'hepar'], ['iom', 'compositum', 'lęsa', 'constitutio', 'favarium', 'dispositio', 'significatus', 'obseruo', 'auicennas', 'cultus', 'lędi', 'possum', 'pręcedo', 'constitutio', 'lęsa', 'faculta', 'ignarus', 'posterus', 'pertineo', 'ueter', 'reliquo', 'tem', 'lęsam'], ['cultus', 'opprimo', 'obruo', 'certus', 'exterior', 'suus', 'principium'], ['sermo', 'quòd', 'somnus', 'animal', 'fa-', 'cultus', 'quiesco', 'naturalis', 'ago', 'uis', 'instauro', 'sympt']]\n"
      ]
     }
    ],
@@ -794,8 +912,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:47:16.245370Z",
-     "start_time": "2023-11-23T22:47:16.235787Z"
+     "end_time": "2023-11-24T12:01:18.267439Z",
+     "start_time": "2023-11-24T12:01:18.254770Z"
     }
    },
    "id": "fe1fb109d3731f2a"
