zipfiles loaded to sciencedata.dk

--- a/scripts/3_metadata-explorations&spacy-extraction.ipynb
+++ b/scripts/3_metadata-explorations&spacy-extraction.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-21T09:10:27.618785Z",
-     "start_time": "2023-11-21T09:10:25.518701Z"
+     "end_time": "2023-11-24T20:31:07.215251Z",
+     "start_time": "2023-11-24T20:31:07.193330Z"
     }
    },
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
     "import spacy\n",
     "from spacy.tokens import Doc\n",
     "import sddk\n",
@@ -22,6 +21,7 @@
     "import re\n",
     "import matplotlib.pyplot as plt\n",
     "import json\n",
+    "import shutil\n",
     "\n",
     "import gspread\n",
     "from gspread_dataframe import get_as_dataframe, set_with_dataframe\n",
@@ -33,6 +33,7 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
+    "# load the language model (see the previous script)\n",
     "nlp = spacy.load('la_core_web_lg')"
    ],
    "metadata": {
@@ -49,6 +50,9 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
+    "# setup communication with gsheet \"noscemus_overview\n",
+    "# to make this work, you need your ServiceAccountKey.json file located somewhere and to point out to it\n",
+    "# I have it in the data folder and in the .gitignore file, what makes it invisible to others; you can make the same\n",
     "file_data = json.load(open(\"../data/ServiceAccountsKey.json\"))\n",
     "# (2) transform the content into crendentials object\n",
     "credentials = service_account.Credentials.from_service_account_info(file_data)\n",
@@ -366,7 +370,6 @@
    "execution_count": 16,
    "outputs": [],
    "source": [
-    "\n",
     "metadata_table_long = []\n",
     "for n in range(len(metadata_table)):\n",
     "    df_row_dict = metadata_table.iloc[n].to_dict()\n",
@@ -1038,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "outputs": [
     {
      "name": "stdout",
@@ -1055,8 +1058,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-21T09:13:54.308805Z",
-     "start_time": "2023-11-21T09:12:16.403587Z"
+     "end_time": "2023-11-24T20:28:57.403968Z",
+     "start_time": "2023-11-24T20:28:47.650154Z"
     }
    },
    "id": "79df7273ed476626"
@@ -1511,13 +1514,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 56,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'/Users/vojtechkase/Projects/noscemus_ETF/data/large_data/sents_pos.zip'"
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# make zip archives of the text files with lemmatazed sentences and pos tags\n",
+    "shutil.make_archive(\"../data/large_data/sents_lemmata\", 'zip', \"../data/large_data/sents_lemmata\") #\n",
+    "shutil.make_archive(\"../data/large_data/sents_pos\", 'zip', \"../data/large_data/sents_pos\") #"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T20:34:07.076968Z",
+     "start_time": "2023-11-24T20:33:17.621287Z"
+    }
    },
    "id": "3dc6bcabe2ab2012"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<Response [201]>"
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# upload the zip archived data to sciencedata.dk \n",
+    "s.s.put(\"https://sciencedata.dk/sharingout/kase%40zcu.cz/TOME/DATA/NOSCEMUS/sents_lemmata.zip\", data=open(\"../data/large_data/sents_lemmata.zip\", \"rb\"))\n",
+    "s.s.put(\"https://sciencedata.dk/sharingout/kase%40zcu.cz/TOME/DATA/NOSCEMUS/sents_pos.zip\", data=open(\"../data/large_data/sents_pos.zip\", \"rb\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T20:44:28.887317Z",
+     "start_time": "2023-11-24T20:44:26.049923Z"
+    }
+   },
+   "id": "ade47b57cd47e2ff"
   },
   {
    "cell_type": "code",
@@ -1527,7 +1574,17 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "e4a56879b7c3b7a"
+   "id": "63ae1e671dc6038b"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Preliminary explorations of Latin wordnet"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "32907c09aa3dc094"
   },
   {
    "cell_type": "code",
